objects/Lead.object
<CustomObject><businessProcesses>
        <fullName>Deal Registration Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>Partner Recruitment</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>Sales Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified - Convert</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Address_Mapped__c</fullName>
        <formula>HYPERLINK("http://maps.google.com?q=" &amp; Street &amp; "%20" &amp; City &amp; "%20" &amp; State &amp; "%20" &amp; PostalCode,IMAGE("/servlet/servlet.FileDownload?file=01541000001Qwuo", "Map Address in Google"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Address in Google Maps</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Business_Family_Members_Data__c</fullName>
        <formula>DandbCompany.FamilyMembers</formula>
        <label>Number Business Family Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Converted_Month__c</fullName>
        <formula>CASE( MONTH(ConvertedDate) , 1, "January", 2, "February", 3, "March",  4, "April",  5, "May",  6, "June", 7, "July", 8, "August", 9, "September", 10, "October", 11, "November", 12, "December", "None")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Month</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Create_Month__c</fullName>
        <formula>CASE( MONTH( Created_Date_without_Time__c  ) , 1, "January", 2, "February", 3, "March",  4, "April",  5, "May",  6, "June", 7, "July", 8, "August", 9, "September", 10, "October", 11, "November", 12, "December", "None")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Created_Date_without_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date without Time</label>
        <type>Date</type>
    </fields><fields>
        <fullName>DB_Days__c</fullName>
        <description>This is used for the "Perfect Data" SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Data_com_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this lead was generated from the Data.com Web-to-Lead form, and is used by workflow to change the lead to the Data.com Record Type.</description>
        <label>Data.com Lead</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Date_Converted__c</fullName>
        <formula>ConvertedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Converted</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Date_of_Last_Activity__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Last Activity</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Days_Remaining__c</fullName>
        <label>Days Remaining</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>IF(ISNULL(LastActivityDate)=false, TODAY() - LastActivityDate, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Deal_Approved_Date__c</fullName>
        <description>Stored the date the deal registraion was approved (via field updates) and is used in lead conversion so the opportunity has the date the deal was registered and can be used to count when the deal expires</description>
        <label>Deal Approved Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Decision_Timeframe__c</fullName>
        <label>Decision Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>Immediately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Delinquency_Risk_Data__c</fullName>
        <formula>IF(ISPICKVAL(DandbCompany.MarketingPreScreen, "L"), "Low Risk of Delinquency", 
IF(ISPICKVAL(DandbCompany.MarketingPreScreen, "M"), "Medium Risk of Delinquency", 
IF(ISPICKVAL(DandbCompany.MarketingPreScreen, "H"), "High Risk of Delinquency", 
"")))</formula>
        <label>D&amp;B Delinquency Risk</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Disqual_Reason__c</fullName>
        <label>Disqual/Archive Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Reached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Facebook_Persona_ID__c</fullName>
        <label>Facebook Persona ID</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Has_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Budget</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Know_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Last_Modified_days__c</fullName>
        <formula>ROUND(NOW()- LastModifiedDate , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Lead_Age__c</fullName>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Lead_Age_days__c</fullName>
        <formula>ROUND(NOW()-CreatedDate, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Lead_Number__c</fullName>
        <description>Used by the Round Robin assignment process.</description>
        <displayFormat>{000000}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields><fields>
        <fullName>Lead_Quality__c</fullName>
        <formula>IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Lead_Total__c &gt; 0, '01541000001Qwv1', '01541000001Qwv2'),'',24,22) &amp;""&amp;
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Lead_Total__c &gt; 5, '01541000001Qwv1', '01541000001Qwv2'),'',24,22) &amp;""&amp;
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Lead_Total__c &gt; 10, '01541000001Qwv1', '01541000001Qwv2'),'',24,22) &amp;""&amp; 
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Lead_Total__c &gt; 15, '01541000001Qwv1', '01541000001Qwv2'),'',24,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Quality</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Lead_Rank__c</fullName>
        <formula>IF( (  Lead_Total__c  &gt;11),"High", IF(AND( Lead_Total__c  &lt;11, Lead_Total__c  &gt; 5),"Medium", "Low"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Rank</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Lead_Score_Value__c</fullName>
        <description>Provides numeric value for Lead_Score__c, which simulates Einstein predictive lead scoring for demos.</description>
        <label>Lead Score Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Lead_Score__c</fullName>
        <formula>IF(AND(Lead_Score_Value__c &lt;=100, Lead_Score_Value__c &gt;60), 
IMAGE(URLsrc__c&amp;"/servlet/servlet.FileDownload?file=01541000001QwvH&amp;oid="&amp;$Organization.Id, "Green")&amp;" " &amp;TEXT(Lead_Score_Value__c), 

IF(AND(Lead_Score_Value__c &lt;=60, Lead_Score_Value__c &gt; 30), 
IMAGE(URLsrc__c&amp;"/servlet/servlet.FileDownload?file=01541000001QwvI&amp;oid="&amp;$Organization.Id, "Yellow")&amp;" " &amp;TEXT(Lead_Score_Value__c), 

IF(Lead_Score_Value__c &lt;=30, 
IMAGE(URLsrc__c&amp;"/servlet/servlet.FileDownload?file=01541000001QwvJ&amp;oid="&amp;$Organization.Id, "Yellow")&amp;" " &amp;TEXT(Lead_Score_Value__c), "0")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Lead_Total__c</fullName>
        <formula>Score1__c + Score2__c  +Score3__c + Score4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>MSA_Data__c</fullName>
        <formula>DandbCompany.FipsMsaDesc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSA</label>
        <type>Text</type>
    </fields><fields>
        <fullName>NAICS_Code_Data__c</fullName>
        <formula>DandbCompany.PrimaryNaics</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAICS Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>NAICS_Description_Data__c</fullName>
        <formula>DandbCompany.PrimaryNaicsDesc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAICS Description</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Priority__c</fullName>
        <formula>IMAGE( URLsrc__c&amp;"/servlet/servlet.ImageServer?id="&amp;CASE( Rating,
"Hot", "01541000001QwvH&amp;oid="&amp;$Organization.Id,
"Warm", "01541000001QwvI&amp;oid="&amp;$Organization.Id,
"Cool", "01541000001QwvJ&amp;oid="&amp;$Organization.Id,
"01541000001QwvJ&amp;oid="&amp;$Organization.Id),"",22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Project_Amount__c</fullName>
        <label>Project Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Project_Budget_Amount__c</fullName>
        <label>Project Budget Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Project_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Defined</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>RC_Keywords__c</fullName>
        <description>Keyword list used by the Relevant Content package. It is recommended that this field is NOT added to the page layout. To add fields containing keywords, edit this formula field to include additional fields separated by spaces.</description>
        <formula>TEXT(Industry) + " " + Competition__c</formula>
        <inlineHelpText>Relevant keywords for this record</inlineHelpText>
        <label>RC_Keywords</label>
        <type>Text</type>
    </fields><fields>
        <fullName>RatingColor__c</fullName>
        <formula>CASE(Rating, 
"Hot", "color:red", 
"Warm", "color:orange", 
"Cold", "color:blue", 
"color:blue")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Registration_Expiration__c</fullName>
        <description>Used for deal registration</description>
        <label>Registration Expiration</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Report_Create_Month__c</fullName>
        <formula>CASE( MONTH(Reported_Create_Month_del__c ) , 1, "January", 2, "February", 3, "March",  4, "April",  5, "May",  6, "June", 7, "July", 8, "August", 9, "September", 10, "October", 11, "November", 12, "December", "None")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Create Month</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Reported_Convert_Date__c</fullName>
        <label>Reported Convert Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Reported_Converted__c</fullName>
        <formula>CASE( MONTH(Reported_Convert_Date__c ) , 1, "January", 2, "February", 3, "March",  4, "April",  5, "May",  6, "June", 7, "July", 8, "August", 9, "September", 10, "October", 11, "November", 12, "December", "None")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reported Converted</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Reported_Create_Month_del__c</fullName>
        <label>Reported Create Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>RoundRobin__c</fullName>
        <formula>CASE(MOD(VALUE( Lead_Number__c ),3),0,"General Queue", 1, "International Queue", 2, "Target Campaign","Invalid ID")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>SIC_Code_Data__c</fullName>
        <formula>DandbCompany.PrimarySic</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>SIC_Description_Data__c</fullName>
        <formula>DandbCompany.PrimarySicDesc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Description</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Score1__c</fullName>
        <formula>IF ( Know_Decision_Maker__c ,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Score2__c</fullName>
        <formula>CASE(Decision_Timeframe__c  ,"Immediately", 5, "1-3 Months",4,"3-6 Months", 3, "6-12 Months", 2, "Next Year", 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Timeframe Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Score3__c</fullName>
        <formula>IF( Project_Defined__c = True, 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Defined Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>SlickSidebar_Tab_Name__c</fullName>
        <formula>FirstName &amp; ' ' &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SlickSidebar Tab Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Source__c</fullName>
        <formula>IMAGE( URLsrc__c&amp;"/servlet/servlet.ImageServer?id="&amp;CASE( LeadSource, 
"Website","01541000001QwvK&amp;oid="&amp;$Organization.Id,
"Social Media", "01541000001QwvL&amp;oid="&amp;$Organization.Id,
"Marketing Event", "01541000001QwvM&amp;oid="&amp;$Organization.Id,
"Referral","01541000001QwvN&amp;oid="&amp;$Organization.Id,
"Cold Call","01541000001QwvO&amp;oid="&amp;$Organization.Id,
"Data.com", "01541000001QwvP&amp;oid="&amp;$Organization.Id,
"Community", "01541000001QwvQ&amp;oid="&amp;$Organization.Id,
"Inbound Call","01541000001QwvR&amp;oid="&amp;$Organization.Id,
"Partner","01541000001QwvS="&amp;$Organization.Id,
"01541000001QwvK&amp;oid="&amp;$Organization.Id),"",22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Ticker_Symbol__c</fullName>
        <formula>DandbCompany.StockSymbol</formula>
        <label>Ticker Symbol</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Twitter_Persona_ID__c</fullName>
        <label>Twitter Persona ID</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>URLsrc__c</fullName>
        <description>This field is to ensure that icons show up properly in Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,".force.com"),
MID( $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0)),
FIND("/", $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0))+1) - FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0))
) , "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Lead_Score__c</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Lead_Quality__c</columns>
        <columns>Source__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified - Convert</value>
        </filters>
        <label>All Leads</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Data_com_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.ANNUAL_REVENUE</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CLEAN_STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_com_Lead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Data.com Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>SalesReps</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Lead_Score_Value__c</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Lead_Quality__c</columns>
        <columns>Source__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Lead</value>
        </filters>
        <label>My Leads</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>My_Open_Registrations</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Approval_Status__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.DealRegistration</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>My Open Registrations</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>My_Rejected_Registrations</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Approval_Status__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.DealRegistration</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>My Rejected Registrations</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>New_Deal_Registrations</fullName>
        <columns>Priority__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Source__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.DealRegistration</value>
        </filters>
        <label>New Deal Registrations</label>
        <language>en_US</language>
        <sharedTo>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>New_Deal_Registrations_TEST</fullName>
        <columns>Priority__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Source__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.DealRegistration</value>
        </filters>
        <label>Deal Registrations</label>
        <language>en_US</language>
        <sharedTo>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>New_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Lead_Score__c</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CLEAN_STATUS</columns>
        <columns>Source__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New Leads</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Pardot_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>pi__score__c</columns>
        <columns>pi__grade__c</columns>
        <columns>pi__last_activity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Pardot_Lead</value>
        </filters>
        <label>Pardot Leads</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>UnassignedPartnerLeads</fullName>
        <columns>Priority__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Source__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Partner Leads - Unassigned</label>
        <language>en_US</language>
        <queue>UnassignedPartnerLeads</queue>
    </listViews><recordTypes>
        <fullName>Data_com</fullName>
        <active>true</active>
        <businessProcess>Sales Lead</businessProcess>
        <description>Demonstrates the capabilities of Data.com.</description>
        <label>Data.com</label>
    </recordTypes><recordTypes>
        <fullName>DealRegistration</fullName>
        <active>true</active>
        <businessProcess>Deal Registration Lead</businessProcess>
        <description>Used by partners to register leads in the Partner Community.</description>
        <label>Deal Registration</label>
    </recordTypes><recordTypes>
        <fullName>Lead</fullName>
        <active>true</active>
        <businessProcess>Sales Lead</businessProcess>
        <description>Standard lead qualification and conversion process.</description>
        <label>Lead</label>
    </recordTypes><recordTypes>
        <fullName>Pardot_Lead</fullName>
        <active>true</active>
        <businessProcess>Sales Lead</businessProcess>
        <description>Demonstrates the capabilities of Pardot.</description>
        <label>Pardot Lead</label>
    </recordTypes></CustomObject>